PNG changed to png

--- a/index.html
+++ b/index.html
@@ -101,33 +101,33 @@
 
 	<div class="section1"> 
 		<img id="aeroplane" src="Aeroplane_2-removebg-preview.png"> 
-		<img id="illustration_scene" src="ilustrasion-scene.PNG"> 
-		<img id="helicopter" src="air-helicopter-removebg-preview.PNG">
-		<img id="man" src="man_walking.PNG">
-		<img id="woman" src="woman.PNG">
+		<img id="illustration_scene" src="ilustrasion-scene.png"> 
+		<img id="helicopter" src="air-helicopter-removebg-preview.png">
+		<img id="man" src="man_walking.png">
+		<img id="woman" src="woman.png">
 	</div>
 	<div section 1a> 
 		 
 	</div>
 	<div class="section1b"> </div>
 	<div class="section2" > 
-		<img id="yellow_taxi" src="yellow_taxi.PNG" > 
-		<img id="bike" src="bike.PNG">
-		<img id="truck" src="truck.PNG">
+		<img id="yellow_taxi" src="yellow_taxi.png" > 
+		<img id="bike" src="bike.png">
+		<img id="truck" src="truck.png">
 	</div>
 
 	<div class="section3" > 
-		<img class="img1" src="street_light.PNG"> 
-		<img class="img2" src="one_way-removebg-preview.PNG"> 
-		<img class="img3" src="street_light.PNG">
-		<img class="img4" src="street_light.PNG">
-		<img class="img5" src="one_way-removebg-preview.PNG">
+		<img class="img1" src="street_light.png"> 
+		<img class="img2" src="one_way-removebg-preview.png"> 
+		<img class="img3" src="street_light.png">
+		<img class="img4" src="street_light.png">
+		<img class="img5" src="one_way-removebg-preview.png">
 	</div>
 
 	<div class="section4"> 
-		<img id="sport_car" src="sport car.PNG" >
-		<img id="yellow_truck" src="yellow_truck.PNG">
-		<img id="yellow_cab" src="yellow_can.PNG">
+		<img id="sport_car" src="sport car.png" >
+		<img id="yellow_truck" src="yellow_truck.png">
+		<img id="yellow_cab" src="yellow_can.png">
 	</div>
 
 	<div class="section5"> </div>
