JFIF to jfif, PNG to png

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		body{overflow-x: hidden; overflow-y: hidden;}
 		.section1
 		{	
-			height:38vh; width:100%;  background-repeat: no-repeat; background: url("skye.JPG"); background-size: 100% 100%; 
+			height:38vh; width:100%;  background-repeat: no-repeat; background: url("skye.jpg"); background-size: 100% 100%; 
 		}
 		.section1b{position: absolute; width: 100%; height: 2vh; transform: translate(0px, -10px); background-color:#58F758;}
 		div.section1 img#aeroplane { position:relative; z-index: 1; animation:aeroplane 2s 0s linear backwards infinite ;}
@@ -41,7 +41,7 @@
 
 		.section2
 		{
-			background: url("road.JFIF"); background-size: 100% 100%; background-repeat: no-repeat;
+			background: url("road.jfif"); background-size: 100% 100%; background-repeat: no-repeat;
 			width: 100%; height: 25vh;
 		}
 
@@ -73,7 +73,7 @@
 		.section3 img.img4 {height:17vh; transform: translate( 950px, -80px); position: absolute; }
 		.section3 img.img5 {height:28vh; transform: translate( 1200px, -130px); position: absolute; }	
 
-		.section4{ background:url("road.JFIF"); background-size: 100% 100%; background-repeat: no-repeat; width: 100%; height: 25vh; }
+		.section4{ background:url("road.jfif"); background-size: 100% 100%; background-repeat: no-repeat; width: 100%; height: 25vh; }
 		div.section4 img#sport_car{position: relative; animation: sportcar 1.5s 0.1s linear forwards infinite ; width: 200px;}
 		@keyframes sportcar
 		{
